[package]
name = "wt_version"
version = "0.1.2"
edition = "2021"
authors = ["FlareFlo"]
license = "MIT"
description = "Semver parsing for the WarThunder version strings"
documentation = "https://docs.rs/wt_version"
homepage = "https://github.com/Warthunder-Open-Source-Foundation/wt_version"
repository = "https://github.com/Warthunder-Open-Source-Foundation/wt_version"

[dependencies]
serde = { version = "1.0", features = ["derive"] }